<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/gradient_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/item_specs_activity_gradient_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:layout_width="0dp"
		android:layout_height="@dimen/item_specs_activity_view_constraint_layout_height"
		android:layout_marginTop="@dimen/item_specs_activity_view_constraint_layout_margin_top"
		android:background="@drawable/item_specs_activity_view_constraint_layout_background"
		app:layout_constraintHorizontal_weight="1"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/search_constraint_layout"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="95dp">

		<android.support.constraint.ConstraintLayout
			android:id="@+id/header_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/item_specs_activity_header_constraint_layout_height"
			android:layout_marginTop="52dp"
			android:background="@color/item_specs_activity_header_constraint_layout_background_color"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<ImageView
				android:id="@+id/item_image_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/item_specs_activity_item_image_image_view_margin_top"
				android:scaleType="center"
				android:src="@drawable/avatar_temp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="126dp"
				tools:layout_editor_absoluteY="25dp" />

			<TextView
				android:id="@+id/tittle_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/item_specs_activity_tittle_text_view_margin_top"
				android:gravity="center"
				android:lineSpacingMultiplier="1.03"
				android:text="@string/item_specs_activity_tittle_text_view_text"
				android:textColor="@color/item_specs_activity_tittle_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_tittle_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/item_image_image_view"
				tools:layout_editor_absoluteX="140dp"
				tools:layout_editor_absoluteY="160dp" />

			<TextView
				android:id="@+id/stock_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/item_specs_activity_stock_text_view_margin_top"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/item_specs_activity_stock_text_view_text"
				android:textColor="@color/item_specs_activity_stock_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_stock_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/tittle_text_view"
				tools:layout_editor_absoluteX="116dp"
				tools:layout_editor_absoluteY="197dp" />

			<TextView
				android:id="@+id/desciption_text_view"
				android:layout_width="@dimen/item_specs_activity_desciption_text_view_width"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/item_specs_activity_desciption_text_view_margin_bottom"
				android:gravity="center"
				android:lineSpacingMultiplier="1.18"
				android:text="@string/item_specs_activity_desciption_text_view_text"
				android:textColor="@color/item_specs_activity_desciption_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_desciption_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				tools:layout_editor_absoluteX="38dp"
				tools:layout_editor_absoluteY="230dp" />
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:layout_width="0dp"
			android:layout_height="@dimen/item_specs_activity_info_bar_constraint_layout_height"
			android:background="@color/item_specs_activity_info_bar_constraint_layout_background_color"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/header_constraint_layout">

			<TextView
				android:id="@+id/condition_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/item_specs_activity_condition_text_view_text"
				android:textColor="@color/item_specs_activity_condition_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_condition_text_view_text_size"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintHorizontal_weight="0.26"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@+id/price_text_view"
				app:layout_constraintTop_toTopOf="parent" />



			<TextView
				android:id="@+id/ventas_text_view"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="25dp"
				android:layout_marginBottom="10dp"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/item_specs_activity_ventas_text_view_text"
				android:textColor="@color/item_specs_activity_ventas_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_ventas_text_view_text_size"
				app:layout_constraintBottom_toTopOf="@+id/ventas_two_text_view"
				app:layout_constraintLeft_toLeftOf="parent" />

			<TextView
				android:id="@+id/ventas_two_text_view"
				android:layout_width="136dp"
				android:layout_height="15dp"
				android:layout_marginBottom="88dp"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/item_specs_activity_ventas_two_text_view_text"
				android:textColor="@color/item_specs_activity_ventas_two_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_ventas_two_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_bias="0.428"
				app:layout_constraintHorizontal_weight="0.21"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@+id/mercadopago_text_view" />

			<TextView
				android:id="@+id/condition_two_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/item_specs_activity_condition_two_text_view_text"
				android:textColor="@color/item_specs_activity_condition_two_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_condition_two_text_view_text_size"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintHorizontal_weight="0.23"
				app:layout_constraintLeft_toRightOf="@+id/price_two_text_view"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/location_label_text_view" />

			<TextView
				android:id="@+id/ventas_three_text_view"
				android:layout_width="125dp"
				android:layout_height="16dp"
				android:layout_marginBottom="88dp"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/item_specs_activity_ventas_three_text_view_text"
				android:textColor="@color/item_specs_activity_ventas_three_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_ventas_three_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_bias="0.407"
				app:layout_constraintHorizontal_weight="0.15"
				app:layout_constraintLeft_toRightOf="@+id/mercadopago_text_view"
				app:layout_constraintRight_toRightOf="parent" />

			<TextView
				android:id="@+id/location_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/item_specs_activity_location_text_view_text"
				android:textColor="@color/item_specs_activity_location_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_location_text_view_text_size"
				app:layout_constraintHorizontal_bias="1.0"
				app:layout_constraintHorizontal_weight="0.26"
				app:layout_constraintLeft_toRightOf="@+id/price_text_view"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/location_label_text_view"
				android:layout_width="114dp"
				android:layout_height="25dp"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="20dp"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/item_specs_activity_location_label_text_view_text"
				android:textColor="@color/item_specs_activity_location_label_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_location_label_text_view_text_size"
				app:layout_constraintBottom_toTopOf="@+id/condition_two_text_view"
				app:layout_constraintHorizontal_bias="0.722"
				app:layout_constraintHorizontal_weight="0.18"
				app:layout_constraintLeft_toRightOf="@+id/price_label_text_view"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/location_text_view" />

			<TextView
				android:id="@+id/price_text_view"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="48dp"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/item_specs_activity_price_text_view_text"
				android:textColor="@color/item_specs_activity_price_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_price_text_view_text_size"
				app:layout_constraintHorizontal_bias="0.498"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/price_label_text_view"
				android:layout_width="40dp"
				android:layout_height="25dp"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="50dp"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/item_specs_activity_price_label_text_view_text"
				android:textColor="@color/item_specs_activity_price_label_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_price_label_text_view_text_size"
				app:layout_constraintBottom_toTopOf="@+id/price_two_text_view"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.498"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

			<TextView
				android:id="@+id/price_two_text_view"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:fontFamily="@font/font_lato_bold"
				android:gravity="center"
				android:text="@string/item_specs_activity_price_two_text_view_text"
				android:textColor="@color/item_specs_activity_price_two_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_price_two_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/price_label_text_view" />

			<TextView
				android:id="@+id/mercadopago_text_view"
				android:layout_width="108dp"
				android:layout_height="16dp"
				android:layout_marginBottom="87dp"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/item_specs_activity_mercadopago_text_view_text"
				android:textColor="@color/item_specs_activity_mercadopago_text_view_text_color"
				android:textSize="@dimen/item_specs_activity_mercadopago_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintHorizontal_bias="0.498"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent" />
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>

	<ImageButton
		android:id="@+id/back_button"
		android:layout_width="@dimen/item_specs_activity_back_button_width"
		android:layout_height="@dimen/item_specs_activity_back_button_height"
		android:layout_marginStart="@dimen/item_specs_activity_back_button_margin_start"
		android:layout_marginTop="@dimen/item_specs_activity_back_button_margin_top"
		android:background="?attr/selectableItemBackground"
		android:src="@drawable/group_2"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="9dp"
		tools:layout_editor_absoluteY="29dp"/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/search_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/item_specs_activity_search_constraint_layout_height"
		android:layout_marginEnd="@dimen/item_specs_activity_search_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/item_specs_activity_search_constraint_layout_margin_start"
		android:layout_marginTop="@dimen/item_specs_activity_search_constraint_layout_margin_top"
		android:background="@drawable/item_specs_activity_search_constraint_layout_background"
		app:layout_constraintHorizontal_weight="0.77"
		app:layout_constraintLeft_toRightOf="@+id/back_button"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="75dp"
		tools:layout_editor_absoluteY="25dp">

		<ImageButton
			android:id="@+id/other_query_button"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/item_specs_activity_other_query_button_margin_bottom"
			android:layout_marginEnd="@dimen/item_specs_activity_other_query_button_margin_end"
			android:layout_marginStart="@dimen/item_specs_activity_other_query_button_margin_start"
			android:layout_marginTop="@dimen/item_specs_activity_other_query_button_margin_top"
			android:background="?attr/selectableItemBackground"
			android:src="@drawable/path_2"
			android:onClick="onNewQueryItem"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_weight="0.25"
			app:layout_constraintLeft_toRightOf="@+id/search_item_edit_text"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_weight="0.69"
			tools:layout_editor_absoluteX="214dp"
			tools:layout_editor_absoluteY="7dp"/>

		<EditText
			android:id="@+id/search_item_edit_text"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/item_specs_activity_search_item_edit_text_margin_bottom"
			android:layout_marginStart="@dimen/item_specs_activity_search_item_edit_text_margin_start"
			android:layout_marginTop="@dimen/item_specs_activity_search_item_edit_text_margin_top"
			android:background="@color/item_specs_activity_search_item_edit_text_background_color"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="start|center_vertical"
			android:hint="@string/item_specs_activity_search_item_edit_text_hint"
			android:inputType="text"
			android:maxLines="1"
			android:textColor="@color/item_specs_activity_search_item_edit_text_text_color"
			android:textColorHint="@color/default_hint"
			android:textSize="@dimen/item_specs_activity_search_item_edit_text_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_weight="0.7"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@+id/other_query_button"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_weight="0.5"
			tools:layout_editor_absoluteX="7dp"
			tools:layout_editor_absoluteY="13dp"/>
	</android.support.constraint.ConstraintLayout>

	<Button
		android:layout_width="@dimen/item_specs_activity_more_info_button_width"
		android:layout_height="@dimen/item_specs_activity_more_info_button_height"
		android:layout_marginBottom="@dimen/item_specs_activity_more_info_button_margin_bottom"
		android:background="@drawable/item_specs_activity_more_info_button_ripple"
		android:fontFamily="@font/font_lato_bold"
		android:gravity="center"
		android:text="@string/item_specs_activity_more_info_button_text"
		android:textColor="@color/item_specs_activity_more_info_button_text_color"
		android:textSize="@dimen/item_specs_activity_more_info_button_text_size"
		android:onClick="onMoreInfo"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="141dp"
		tools:layout_editor_absoluteY="590dp"/>
</android.support.constraint.ConstraintLayout>