<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/gradient_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/initial_activity_gradient_constraint_layout_background_color">

	<TextView
		android:id="@+id/slogan_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/initial_activity_slogan_text_view_margin_top"
		android:fontFamily="@font/font_lato_regular"
		android:gravity="center"
		android:text="@string/initial_activity_slogan_text_view_text"
		android:textColor="#000"
		android:textSize="@dimen/initial_activity_slogan_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/me_li_title_text_view"
		tools:layout_editor_absoluteX="51dp"
		tools:layout_editor_absoluteY="214dp"/>

	<ImageView
		android:id="@+id/me_li_title_text_view"
		android:layout_width="match_parent"
		android:layout_height="130dp"
		android:layout_marginTop="70dp"
		android:gravity="center"
		android:src="@drawable/mercado_logo"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/search_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/initial_activity_search_constraint_layout_height"
		android:layout_marginEnd="@dimen/initial_activity_search_constraint_layout_margin_end"
		android:layout_marginStart="@dimen/initial_activity_search_constraint_layout_margin_start"
		android:layout_marginTop="@dimen/initial_activity_search_constraint_layout_margin_top"
		android:background="@drawable/initial_activity_search_constraint_layout_background"
		app:layout_constraintHorizontal_weight="0.89"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/slogan_text_view"
		tools:layout_editor_absoluteX="20dp"
		tools:layout_editor_absoluteY="298dp">
	
		<EditText
			android:id="@+id/searched_item_edit_text"
			android:layout_width="0dp"
			android:layout_height="@dimen/initial_activity_searched_item_edit_text_height"
			android:layout_marginEnd="@dimen/initial_activity_searched_item_edit_text_margin_end"
			android:layout_marginStart="@dimen/initial_activity_searched_item_edit_text_margin_start"
			android:layout_marginTop="@dimen/initial_activity_searched_item_edit_text_margin_top"
			android:background="@color/initial_activity_searched_item_edit_text_background_color"
			android:fontFamily="@font/font_lato_regular"
			android:gravity="start|center_vertical"
			android:hint="@string/initial_activity_searched_item_edit_text_hint"
			android:inputType="text"
			android:maxLines="1"
			android:textColor="@color/initial_activity_searched_item_edit_text_text_color"
			android:textColorHint="@color/default_hint"
			android:textSize="@dimen/initial_activity_searched_item_edit_text_text_size"
			app:layout_constraintHorizontal_weight="0.91"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="15dp"
			tools:layout_editor_absoluteY="14dp"/>
	</android.support.constraint.ConstraintLayout>

	<Button
		android:id="@+id/search_button"
		android:layout_width="200dp"
		android:layout_height="@dimen/initial_activity_search_button_height"
		android:layout_marginBottom="172dp"
		android:layout_marginEnd="@dimen/initial_activity_search_button_margin_end"
		android:layout_marginStart="@dimen/initial_activity_search_button_margin_start"
		android:background="@drawable/initial_activity_search_button_ripple"
		android:fontFamily="@font/font_lato_bold"
		android:gravity="center"
		android:text="@string/initial_activity_search_button_text"
		android:textColor="@color/initial_activity_search_button_text_color"
		android:textSize="@dimen/initial_activity_search_button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/faq_button"
		app:layout_constraintHorizontal_weight="0.89"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"/>

	<Button
		android:id="@+id/faq_button"
		android:layout_width="120dp"
		android:layout_height="@dimen/initial_activity_faq_button_height"
		android:layout_marginBottom="@dimen/initial_activity_faq_button_margin_bottom"
		android:background="?attr/selectableItemBackground"
		android:fontFamily="@font/font_roboto_regular"
		android:gravity="center"
		android:text="@string/initial_activity_faq_button_text"
		android:textColor="@color/initial_activity_faq_button_text_color"
		android:textSize="@dimen/initial_activity_faq_button_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"/>

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>