<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="@dimen/results_view_holder_result_height"
	android:background="@color/results_view_holder_result_background_color">

	<ImageView
		android:id="@+id/item_image_view"
		android:layout_width="@dimen/results_view_holder_item_image_view_width"
		android:layout_height="@dimen/results_view_holder_item_image_view_height"
		android:layout_marginStart="@dimen/results_view_holder_item_image_view_margin_start"
		android:scaleType="centerInside"
		android:src="@drawable/bg_photo_3"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="14dp"
		tools:layout_editor_absoluteY="9dp"/>

	<TextView
		android:id="@+id/item_name_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/results_view_holder_item_name_text_view_margin_start"
		android:layout_marginTop="@dimen/results_view_holder_item_name_text_view_margin_top"
		android:fontFamily="@font/font_lato_regular"
		android:gravity="start"
		android:text="@string/results_view_holder_item_name_text_view_text"
		android:textColor="@color/results_view_holder_item_name_text_view_text_color"
		android:textSize="@dimen/results_view_holder_item_name_text_view_text_size"
		app:layout_constraintLeft_toRightOf="@+id/item_image_view"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="85dp"
		tools:layout_editor_absoluteY="23dp"/>

	<TextView
		android:id="@+id/description_text_view"
		android:layout_width="@dimen/results_view_holder_description_text_view_width"
		android:layout_height="@dimen/results_view_holder_description_text_view_height"
		android:layout_marginBottom="@dimen/results_view_holder_description_text_view_margin_bottom"
		android:layout_marginStart="@dimen/results_view_holder_description_text_view_margin_start"
		android:fontFamily="@font/font_lato_regular"
		android:gravity="start"
		android:text="@string/results_view_holder_description_text_view_text"
		android:textColor="@color/results_view_holder_description_text_view_text_color"
		android:textSize="@dimen/results_view_holder_description_text_view_text_size"
		app:layout_constraintBottom_toTopOf="@+id/price_text_view"
		app:layout_constraintLeft_toRightOf="@+id/item_image_view"
		tools:layout_editor_absoluteX="85dp"
		tools:layout_editor_absoluteY="46dp"/>

	<TextView
		android:id="@+id/price_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/results_view_holder_price_text_view_margin_bottom"
		android:layout_marginStart="@dimen/results_view_holder_price_text_view_margin_start"
		android:fontFamily="@font/font_lato_bold"
		android:gravity="start"
		android:text="@string/results_view_holder_price_text_view_text"
		android:textColor="@color/results_view_holder_price_text_view_text_color"
		android:textSize="@dimen/results_view_holder_price_text_view_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		tools:layout_editor_absoluteX="85dp"
		tools:layout_editor_absoluteY="73dp"/>

	<ImageButton
		android:id="@+id/specifications_button"
		android:layout_width="@dimen/results_view_holder_specifications_button_width"
		android:layout_height="@dimen/results_view_holder_specifications_button_height"
		android:layout_marginEnd="@dimen/results_view_holder_specifications_button_margin_end"
		android:layout_marginTop="@dimen/results_view_holder_specifications_button_margin_top"
		android:background="?attr/selectableItemBackground"
		android:src="@drawable/path_2"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="316dp"
		tools:layout_editor_absoluteY="2dp"/>

	<Button
		android:id="@+id/specification2_button"
		android:layout_width="@dimen/results_view_holder_specification2_button_width"
		android:layout_height="@dimen/results_view_holder_specification2_button_height"
		android:layout_marginEnd="@dimen/results_view_holder_specification2_button_margin_end"
		android:layout_marginTop="@dimen/results_view_holder_specification2_button_margin_top"
		android:background="?attr/selectableItemBackground"
		android:gravity="start"
		android:textColor="@color/results_view_holder_specification2_button_text_color"
		android:textSize="@dimen/results_view_holder_specification2_button_text_size"
		app:layout_constraintRight_toLeftOf="@+id/specifications_button"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="4dp"
		tools:layout_editor_absoluteY="2dp"/>
</android.support.constraint.ConstraintLayout>